<resources>
    <string name="app_name">Cinephilia</string>
    <string name="movies">Movies</string>
    <string name="series">TV Shows</string>
    <string name="media_image">Media Image</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mollis ac ante in tincidunt. Suspendisse felis neque, lobortis vitae maximus et, porta id mi. Sed sed dui justo. Etiam id ante lobortis, commodo enim ut, sollicitudin dolor. Maecenas at vehicula dui. Duis placerat lacus sed odio scelerisque, eget vulputate lorem aliquam. Nullam consequat fringilla leo, in pellentesque ex posuere nec. Sed nec urna dolor. Proin non suscipit mi. Integer varius, lorem non viverra convallis, nulla nisi eleifend lorem, vitae volutpat metus ex sed elit. Donec nec erat arcu. Nunc lobortis venenatis tortor, nec finibus nisi cursus id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi mollis ac ante in tincidunt. Suspendisse felis neque, lobortis vitae maximus et, porta id mi. Sed sed dui justo. Etiam id ante lobortis, commodo enim ut, sollicitudin dolor. Maecenas at vehicula dui. Duis placerat lacus sed odio scelerisque, eget vulputate lorem aliquam. Nullam consequat fringilla leo, in pellentesque ex posuere nec. Sed nec urna dolor. Proin non suscipit mi. Integer varius, lorem non viverra convallis, nulla nisi eleifend lorem, vitae volutpat metus ex sed elit. Donec nec erat arcu. Nunc lobortis venenatis tortor, nec finibus nisi cursus id. </string>
    <string name="people">People</string>
    <string name="media_person_image">Media Person Image</string>
    <string name="person_image">Person image</string>
    <string name="biography">Biography</string>
    <string name="character">As</string>
    <string name="cast">Cast</string>
    <string name="tv_shows">TV Shows</string>
    <string name="as">As</string>
</resources>