<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personDetailsBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.feature1.view.PersonDetailsFragment">

    <ScrollView
        android:id="@+id/svPersonMainDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/llPersonMediaDetails"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="51dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/ivPersonDetail"
                android:layout_width="175dp"
                android:layout_height="200dp"
                android:contentDescription="@string/person_image"
                android:src="@drawable/ic_baseline_person_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/llPersonSomeInfo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/ivPersonDetail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPersonDetail"
                app:layout_constraintTop_toTopOf="@id/ivPersonDetail">

                <TextView
                    android:id="@+id/tvPersonDetailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="Person Detail Name" />

                <TextView
                    android:id="@+id/tvPersonKnownFor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:textSize="20sp"
                    tools:text="Known for: Acting" />

                <TextView
                    android:id="@+id/tvPersonPopularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:textSize="20sp"
                    tools:text="Popularity: 125" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvPersonGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:paddingBottom="4dp"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/ivPersonDetail"
                app:layout_constraintTop_toBottomOf="@id/llPersonSomeInfo"
                tools:text="Female" />

            <LinearLayout
                android:id="@+id/llPersonDetailDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/ivPersonDetail"
                app:layout_constraintTop_toBottomOf="@id/tvPersonGender">

                <TextView
                    android:id="@+id/tvPersonBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    tools:text="Birthday" />

                <TextView
                    android:id="@+id/tvPersonDeathDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:gravity="start"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    tools:text="Death Day" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvPersonBirthPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toTopOf="@id/tvBiography"
                app:layout_constraintStart_toStartOf="@id/ivPersonDetail"
                app:layout_constraintTop_toBottomOf="@id/llPersonDetailDate"
                tools:text="Birth Place" />

            <TextView
                android:id="@+id/tvBiography"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="1dp"
                android:text="@string/biography"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/ivPersonDetail"
                app:layout_constraintTop_toBottomOf="@id/tvPersonBirthPlace" />

            <TextView
                android:id="@+id/tvPersonDetailBiography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/llPersonSomeInfo"
                app:layout_constraintStart_toStartOf="@id/ivPersonDetail"
                app:layout_constraintTop_toBottomOf="@id/tvBiography"
                tools:text="@string/description" />

            <ProgressBar
                android:id="@+id/pbPersonDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llPersonMediaDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svPersonMainDetails">

        <LinearLayout
            android:id="@+id/llPersonMovieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPersonMovies"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:text="@string/movies"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPersonMovies"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                tools:listitem="@layout/item_person_media" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPersonTVShowDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPersonTvShows"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/tv_shows"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPersonTVShows"
                android:layout_width="match_parent"
                android:layout_height="106dp"
                tools:listitem="@layout/item_person_media" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>