<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mediaDetailsBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.feature1.view.MediaDetailsFragment">

    <ScrollView
        android:id="@+id/svMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="4dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/llMediaCredits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ivMovie"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:contentDescription="@string/media_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_baseline_perm_media_24" />

            <TextView
                android:id="@+id/tvMovieName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/ivMovie"
                app:layout_constraintTop_toBottomOf="@id/ivMovie"
                tools:text="Movie Name" />

            <TextView
                android:id="@+id/tvMovieOriginalTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/ivMovie"
                app:layout_constraintTop_toBottomOf="@id/tvMovieName"
                tools:text="Original Movie Name" />

            <TextView
                android:id="@+id/tvMovieGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/tvMovieLanguage"
                app:layout_constraintStart_toStartOf="@id/ivMovie"
                app:layout_constraintTop_toBottomOf="@id/tvMovieOriginalTitle"
                tools:text="sci-fi, drama" />

            <TextView
                android:id="@+id/tvMovieYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/ivMovie"
                app:layout_constraintTop_toBottomOf="@id/tvMovieGenres"
                tools:text="2020" />

            <TextView
                android:id="@+id/tvMovieLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="32dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toEndOf="@id/tvMovieGenres"
                app:layout_constraintTop_toTopOf="@id/tvMovieGenres"
                tools:text="en" />

            <TextView
                android:id="@+id/tvMovieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="@id/tvMovieYear"
                tools:text="8.5/10" />

            <TextView
                android:id="@+id/tvMovieDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="@id/ivMovie"
                app:layout_constraintTop_toBottomOf="@id/tvMovieYear"
                tools:text="@string/description" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.90"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pbMovieDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/llMediaCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svMovieDetails">

        <TextView
            android:id="@+id/tvCast"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/cast"
            android:textSize="22sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMediaCredits"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/svMovieDetails"
            tools:listitem="@layout/item_media_person" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>